--- a/presentacion/dia02.html
+++ b/presentacion/dia02.html
@@ -130,115 +130,7 @@ a demanda</p></li><li><p>Algunos RDBMS utilizan un tipo especial llamado "AUTO_I
 <span class="keyword">FROM</span> {ruta_archivo}
 [ [ WITH ] ( option [, ...] ) ]</code></pre></div></div>
 <div class="ulist"><ul><li><p><strong>option</strong> puede ser:</p><div class="ulist"><ul><li><p>DELIMITER '{caracter}' &#8594; Caracter delimitador</p></li><li><p>QUOTE  '{caracter}' &#8594; Caracter para delimitar texto</p></li><li><p>FORMAT {CSV} &#8594; para indicar texto separado por comas</p></li><li><p>HEADER &#8594; Ignora la primera línea</p></li></ul></div></li></ul></div></section><section id="slide-dump"><h2>DUMP</h2><div class="ulist"><ul><li><p>Formatos que permiten un respaldo de la base de datos</p></li><li><p>Generalmente solo son compatibles con una RDBMS particular</p></li><li><p>Pueden existir problemas entre diferentes versiones de una misma
-RDBMS</p></li></ul></div></section></section>
-<section><section id="slide-inserciones"><h2>Inserciones</h2><div class="ulist"><ul><li><p>La instrucción INSERT permite insertar(crear) una o más filas</p></li></ul></div><div class="listingblock"><div class="content"><pre class="CodeRay"><code class="sql language-sql"><span class="class">INSERT</span> <span class="class">INTO</span> {tabla}
-[({columna} [,...])]
-<span class="keyword">VALUES</span> ({expresion} [,...])</code></pre></div></div></section><section id="slide-inserciones-2"><h2>Inserciones</h2><div class="ulist"><ul><li><p>No importa el orden de las columnas (se especifica en la instrucción)</p></li><li><p>Si no se definen columnas a insertar, se toma el valor default, en caso
-contrario deja el estado en NULL</p></li><li><p>Se pueden combinar con Secuencias y funciones</p></li></ul></div></section></section>
-<section id="slide-actualizaciones"><h2>Actualizaciones</h2><div class="ulist"><ul><li><p>Permite alterar una o más columnas de una o más tuplas</p></li></ul></div>
-<div class="listingblock"><div class="content"><pre class="CodeRay"><code class="sql language-sql"><span class="class">UPDATE</span> {tabla}
-<span class="class">SET</span> [ {columna} = {expresion} [, ...] ]
-<span class="keyword">WHERE</span> [ condicion ]</code></pre></div></div></section>
-<section><section id="slide-eliminaciones"><h2>Eliminaciones</h2><div class="admonitionblock warning"><table><tr><td class="icon"><i class="fa fa-warning" title="Warning"></i></td><td class="content">Siempre usar WHERE</td></tr></table></div><div class="listingblock"><div class="content"><pre class="CodeRay"><code class="sql language-sql"><span class="class">DELETE</span> <span class="keyword">FROM</span> {tabla}
-[ <span class="keyword">WHERE</span> [ condicion ] ]</code></pre></div></div></section><section id="slide-eliminacin-total"><h2>Eliminación total</h2><div class="admonitionblock warning"><table><tr><td class="icon"><i class="fa fa-warning" title="Warning"></i></td><td class="content">Solo usar en ambientes de prueba</td></tr></table></div>
-<div class="ulist"><ul><li><p>Sirve para eliminar todas las filas de una tabla</p></li></ul></div>
-<div class="listingblock"><div class="content"><pre class="CodeRay"><code class="sql language-sql"><span class="class">TRUNCATE</span> <span class="type">TABLE</span> {tabla}</code></pre></div></div></section></section>
-<section><section id="slide-consultas"><h2>Consultas</h2><div class="ulist"><ul><li><p>A veces se considera como <strong>DQL</strong></p></li><li><p>Permite aplicar reglas de agrupación, selección y clasificación
-de tablas para generar un resultado</p></li><li><p><strong>ResultSet</strong> &#8594; Grupo de filas cuyas columnas pueden provenir
-de una o más fuentes.</p><div class="ulist"><ul><li><p>También contiene la "metadata" o descripción de dicha información</p></li></ul></div></li></ul></div></section><section id="slide-select"><h2>SELECT</h2><div class="ulist"><ul><li><p>En su forma más simple, permite elegir columnas específicas de una
-tabla a partir de condiciones determinadas</p></li></ul></div>
-<div class="listingblock"><div class="content"><pre class="CodeRay"><code class="sql language-sql"><span class="class">SELECT</span> [{columna1} [,{columnan},...] | *
-<span class="keyword">FROM</span> {tabla} [ <span class="keyword">AS</span> {alias} ]
-[ <span class="keyword">WHERE</span> {expresion} ]</code></pre></div></div></section><section id="slide-algebra-relacional"><h2>Algebra Relacional</h2><div class="ulist"><ul><li><p>Fundamento matemático para la manipulación de series de datos</p></li><li><p>Utilizada de manera interna por los RDBMS para procesar la información
-y generar Result Sets</p></li></ul></div></section><section id="slide-joins"><h2>Joins</h2><div class="ulist"><ul><li><p>Operación dentro de un select que permite combinar las columnas
-de dos tablas para generar un único result set</p><div class="ulist"><ul><li><p><strong>Inner Join</strong> &#8594; Integra los resultados donde los valores de las
-columnas comparadas coincidan</p></li><li><p><strong>Left Join</strong> &#8594; Integra los resultados donde los valores de las
-columnas comparadas coincidan, o donde los valores de la comparación izquierda
-no coincidan con ningún valor de la derecha</p></li></ul></div></li></ul></div></section><section id="slide-joins-2"><h2>Joins</h2><div class="ulist"><ul><li><p><strong>Full Outer Join</strong> &#8594; Integra todas las combinaciones posibles</p></li></ul></div></section><section id="slide-inner-join"><h2>Inner Join</h2><div class="imageblock" style=""><img src="./images/join.png" alt="join"></div></section><section id="slide-inner-join-2"><h2>Inner Join</h2><div class="listingblock"><div class="content"><pre class="CodeRay"><code class="sql language-sql"><span class="class">SELECT</span> [{columna1} [,{columnan},...] | *
-<span class="keyword">FROM</span> {tabla} [ <span class="keyword">AS</span> {alias} ]
-<span class="keyword">INNER</span> <span class="keyword">JOIN</span> {tabla2} [ <span class="keyword">AS</span> {alias2} ]
-<span class="keyword">ON</span> {expresion}
-[ <span class="keyword">WHERE</span> {expresion} ]</code></pre></div></div></section><section id="slide-left-right"><h2>Left / Right</h2><div class="imageblock" style=""><img src="./images/left_join.svg" alt="left join"></div></section><section id="slide-full-outer"><h2>Full Outer</h2><div class="imageblock" style=""><img src="./images/full_join.svg" alt="full join"></div></section><section id="slide-union"><h2>Union</h2><div class="ulist"><ul><li><p>Permite combinar varios ResultSets en uno solo</p></li></ul></div>
-<div class="listingblock"><div class="content"><pre class="CodeRay"><code class="sql language-sql">(<span class="class">SELECT</span> [{columna1} [,{columnan},...] | *
-<span class="keyword">FROM</span> {tabla} [ <span class="keyword">AS</span> {alias} ]
-[ <span class="keyword">WHERE</span> {expresion} ])
-<span class="keyword">UNION</span>
-<span class="class">SELECT</span> [{columnaa} [,{columnax},...] | *
-<span class="keyword">FROM</span> {tabla2} [ <span class="keyword">AS</span> {alias2} ]
-[ <span class="keyword">WHERE</span> {expresion} ]</code></pre></div></div></section><section id="slide-subqueries"><h2>Subqueries</h2><div class="ulist"><ul><li><p>Cada Query (generalmente un select) devuelve como resultado
-un ResultSet</p></li><li><p>Un ResultSet tiene prácticamente las mismas propiedades de una
-tabla por lo que su comportamiento es similar (aunque no es persistente)</p></li><li><p>Esto permite usar un ResultSet como parte de otro query para procesar
-/ filtrar datos y generar un nuevo Result Set</p></li></ul></div></section><section id="slide-subqueries-2"><h2>Subqueries</h2><div class="listingblock"><div class="content"><pre class="CodeRay"><code class="sql language-sql"><span class="class">SELECT</span> [{columna1} [,{columnan},...] | *
-<span class="keyword">FROM</span> {tabla} [ <span class="keyword">AS</span> {alias} ]
-<span class="keyword">WHERE</span> columna1 <span class="keyword">IN</span> (
-        <span class="class">SELECT</span> [...]
-)</code></pre></div></div></section><section id="slide-subqueries-3"><h2>Subqueries</h2><div class="listingblock"><div class="content"><pre class="CodeRay"><code class="sql language-sql"><span class="class">SELECT</span> [{columna1} [,{columnan},...] | *
-<span class="keyword">FROM</span> (
-        <span class="class">SELECT</span> [{columna1} [,{columnan},...] | *
-        <span class="keyword">FROM</span> {tabla} [ <span class="keyword">AS</span> {alias} ]
-        <span class="keyword">WHERE</span> columna1 <span class="keyword">IN</span> (
-                <span class="class">SELECT</span> [...]
-        )
-) <span class="keyword">AS</span> {alias}
-
-== Funciones
-
-* Las funciones ejecutan una serie de instrucciones que devuelven
-un valor asignable a una columna
-* Las funciones pueden recibir <span class="integer">0</span>, <span class="integer">1</span> o m<span class="error">á</span>s argumentos
-* Las funciones regresan un tipo de dato espec<span class="error">í</span>fico
-
-=== Funciones m<span class="error">á</span>s comunes
-
-* **lower** / **upper** -&gt; Transforman texto en <span class="predefined">min</span><span class="error">ú</span>sculas / may<span class="error">ú</span>sculas
-* **<span class="predefined">substring</span>** -&gt; Recortan un texto
-* **trim** -&gt; Eliminan los espacios en los extremos de un texto
-* **<span class="class">replace</span>** -&gt; Reemplaza un pedazo de texto con otro dentro de una columna
-
-=== Funciones m<span class="error">á</span>s comunes
-
-* **round** -&gt; Redondea un n<span class="error">ú</span>mero flotante (<span class="predefined-type">decimal</span>)
-* **trunc** -&gt; Elimina los decimales de un n<span class="error">ú</span>mero
-* **mod** -&gt; Obtiene el m<span class="error">ó</span>dulo de un n<span class="error">ú</span>mero
-* **random** -&gt; Devuelve un n<span class="error">ú</span>mero aleatorio
-* **generate_series** -&gt; Genera n<span class="error">ú</span>meros secuenciales
-
-=== Funciones m<span class="error">á</span>s comunes
-
-* **date_part** -&gt; Obtiene una porci<span class="error">ó</span>n de una fecha/hora
-* **current_timestamp** -&gt; Devuelve la fecha/hora actual
-* **interval** -&gt; Tipo de dato para operar con fechas
-
-== Inserciones m<span class="error">ú</span>ltiples
-
-* Se pueden combinar las sentencias **<span class="class">INSERT</span>** con **<span class="class">SELECT</span>**
-para insertar series de datos
-
-[source,sql]</code></pre></div></div>
-<div class="paragraph"><p>INSERT INTO {tabla}
-[({columna} [,&#8230;&#8203;])]
-SELECT [{columna1} [,{columnan},&#8230;&#8203;] | *
-FROM {tabla} [ AS {alias} ]
-[ WHERE {expresion} ]</p></div>
-<div class="listingblock"><div class="content"><pre class="CodeRay"><code>=== Ejercicio de limpieza de datos
-
-* Limpiar e insertar la información del MoMA en las tablas
-normalizadas
-
-== Indices
-
-* Es una estructura de la base de datos para incrementar la
-velocidad de lectura de información en una tabla
-* Ocupa mayor espacio en almacenamiento
-* Los índices hacen referencia a una o más columnas
-
-=== Indices
-
-[source,sql]</code></pre></div></div>
-<div class="paragraph"><p>CREATE [ UNIQUE ] INDEX  {nombre}
-ON {tabla} ( {columna} [, {columna}&#8230;&#8203;] )
-[ WHERE {expresion}</p></div>
-<div class="listingblock"><div class="content"><pre class="CodeRay"><code></code></pre></div></div></section></section></div></div><script src="reveal.js/lib/js/head.min.js"></script><script src="reveal.js/js/reveal.js"></script><script>// See https://github.com/hakimel/reveal.js#configuration for a full list of configuration options
+RDBMS</p></li></ul></div></section></section></div></div><script src="reveal.js/lib/js/head.min.js"></script><script src="reveal.js/js/reveal.js"></script><script>// See https://github.com/hakimel/reveal.js#configuration for a full list of configuration options
 Reveal.initialize({
   // Display controls in the bottom right corner
   controls: true,
